app/components/Footer/footer.module.css
.footer {
	position: fixed;
	bottom: 0;
	left: calc(18% + 41%); /* 18% (Sidebar) + 41% (Half of remaining 82%) */
	transform: translateX(-50%);
	width: 81%; /* Occupy the remaining screen width */
	padding: 2px 0;
	text-align: center;
	font-size: 14px;
	color: black;
	background: #f8fafc;
	z-index: 5;
}

